# html_highlight

./: .coveragerc  .gitignore  LICENSE  README.md  _highlight_style.css  _input_dummy.txt  _rando_style.css  _style.css  _style2.css  ablation.py  annotate_util.py  clearoutput.sh  color_functions.py  generate_css.ipynb  highlighting_functions.py  hlclip.py  in.txt  input.R  input.py  json2html.py  makecss.py  model_inference_meta.json  output.html  plotting.py  pyproject.toml  rando_style.css  render.py  run_inference.py  search.py  sequencetagger.ipynb  server.py  split_data.py  syntaxhtml.py  tagged_example_R.txt  test.html  test.ipynb  test.md  test.py  text_functions.py  tokenize.ipynb  (+3 more)
data/: class_aliases.json  class_aliases_str.json  dataset.ndjson  examples_annot.json  ignore.txt  known_minimal.json  split_index.json  split_index_0113.json  split_index_0116.json  split_index_0119.json  split_index_0202.json  split_index_0216.json  split_index_0301.json  split_index_0315.json  split_index_0823.json
model_inference/: lstm_0113_meta.json  lstm_0113_state.pth
model_params/: lstm_large.json  lstm_med.json  lstm_med_extra.json  lstm_small.json
models/: lstmTagger_state.pth  lstmTagger_vocabs.json
notebooks/: data_augment.ipynb  dataset_stats.ipynb  deduplication.ipynb  extra_feats.ipynb  predict_next_token.ipynb  predicted_class_distribution.ipynb  rnn_tagger.ipynb  tag_after_det.ipynb  tokenizemodel.ipynb  train_stats.ipynb
optuna/: config.toml
output/: pred_output.json
patterns/: p_R.json  p_python.json
previews/: _style.css  all data.html  all_java.html  (+11 more)
(+476 files in other folders)
